--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,38 @@
 {
     "manifest_version": 2,
     "name": "share to twitter",
-    "version": "0.3",
+    "version": "0.4",
     "description": "今見ているページを簡単にTwitterへ共有",
-    "permissions": [
+
+    "icons":
+    {
+        "16": "icons/icon_16px.png",
+        "48": "icons/icon_48px.png",
+        "128": "icons/icon_128px.png"
+    },
+
+    "permissions": 
+    [
         "activeTab",
         "contextMenus"
     ],
+
     "browser_action":
     {
         "default_title": "share to twitter"
     },
+
     "background":
     {
         "scripts": [ "script.js" ],
         "persistent": true
     },
-    "content_scripts": [{
-        "matches": ["https://twitter.com/intent/tweet/complete/*"],
-        "js": ["content.js"]
-    }]
+
+    "content_scripts": 
+    [
+        {
+            "matches": ["https://twitter.com/intent/tweet/complete/*"],
+            "js": ["content.js"]
+        }
+    ]
 }
