--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "share to twitter",
-    "version": "0.4.1",
+    "version": "0.4.2",
     "description": "今見ているページを簡単にTwitterへ共有",
 
     "icons":
@@ -32,7 +32,7 @@
     [
         {
             "matches": ["https://twitter.com/intent/tweet/complete/*"],
-            "js": ["content.js"]
+            "js": ["closeTab.js"]
         }
     ]
 }
